vcluster_versioned_docs/version-0.26.0/deploy/worker-nodes/private-nodes/node-requirements.mdx
---
title: Node Requirements
sidebar_label: Node Requirements
sidebar_position: 4
sidebar_class_name: private-nodes 
---

import TenancySupport from '../../../_fragments/tenancy-support.mdx';

<TenancySupport privateNodes="true" />

## Private node requirements

- vCluster CLI installed on your local machine
- Access to a host cluster
- Worker nodes
- kubeadm is used in the join script, so meeting the [kubeadm requirements](https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/#before-you-begin) is recommended

<!-- vale off -->
## OS requirements
<!-- vale on -->

- Linux distribution with SystemD support (required for service management)
- `iptables` binaries installed (automatically available on Ubuntu, may need manual installation on other distributions)
- `curl` installed
- Root user access

:::warning
Security-Enhanced Linux (SELinux) is currently not supported.
:::

<!-- vale off -->
## Supported OSes
<!-- vale on -->

| OS | Version| Additional Instructions |
|---|---|---|
| Ubuntu | 24.04 | |
| Ubuntu | 22.04 | |
| RHEL (RedHat Enterprise Linux) | 10 | Disable SElinux |
| RHEL (RedHat Enterprise Linux) | 9 | Disable SElinux |
| CentOS Stream | 9 | Disable SElinux and install `iptables` |

<!-- vale off -->
### CentOS - additional instructions
<!-- vale on -->

```shell title="Install iptables"
yum install iptables-services
systemctl enable iptables
systemctl start iptables
```