vcluster_versioned_docs/version-0.34.0/deploy/worker-nodes/private-nodes/node-requirements.mdx
---
title: Node Requirements
sidebar_label: Node Requirements
sidebar_position: 4
sidebar_class_name: private-nodes 
---

import TenancySupport from '../../../_fragments/tenancy-support.mdx';

<TenancySupport privateNodes="true" />

## Private node requirements

- vCluster CLI installed on your local machine
- Access to a control plane cluster
- Worker nodes
- kubeadm is used in the join script, so meeting the [kubeadm requirements](https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/#before-you-begin) is recommended

## Host requirements

- Linux distribution with SystemD support (required for service management)
- `iptables` binaries installed (automatically available on Ubuntu, may need manual installation on other distributions)
- `curl` installed
- Root user access

:::info
On RHEL 8 and 9, SELinux in enforcing mode is supported with the
`vcluster-selinux` RPM. The Private Node join script installs it
automatically; no extra steps are required. See
[SELinux support](./security/selinux.mdx).
:::

## Supported operating systems

| OS | Version | Additional Instructions |
|---|---|---|
| Ubuntu | 24.04 | |
| Ubuntu | 22.04 | |
| RHEL (RedHat Enterprise Linux) | 9 | [Install `vcluster-selinux`](./security/selinux.mdx) or disable SELinux |
| RHEL (RedHat Enterprise Linux) | 8 | [Install `vcluster-selinux`](./security/selinux.mdx) and pin Kubernetes to 1.31, or disable SELinux |
| RHEL (RedHat Enterprise Linux) | 10 | Disable SELinux |
| CentOS Stream | 9 | Disable SELinux and install `iptables` |
| Rocky | 10 | Disable SELinux and install `iptables` |
| Rocky | 9 | Disable SELinux and install `iptables` |


### CentOS Stream and Rocky support

```shell title="Install iptables"
yum install iptables-services
systemctl enable iptables
systemctl start iptables
```